fix for select width on mobile

--- a/src/styles/_select.scss
+++ b/src/styles/_select.scss
@@ -9,15 +9,24 @@
     }
 }
 .select2-container--default  {
+    max-width: 33.4rem;
+
+    @include md {
+        max-width: initial;
+    }
     .select2-selection--single {
         border: none;
-        padding: 1.6rem 1.8rem;
+        padding: 1.6rem 1rem;
         border-radius: 0!important;
         height: auto!important;
         display: flex!important;
         flex: 0 0 100%;
         align-items: center;
         justify-content: space-between;
+
+        @include md {
+            padding: 1.6rem 1.8rem;
+        }
 
         .select2-selection__rendered {
             font-family: $font-stack-os-regular;
